--- a/weighted_randomizer.html
+++ b/weighted_randomizer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X Username Picker</title>
+    <title>X Sweepstakes Picker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <h1>X Username Picker</h1>
+    <h1>X Sweepstakes Picker</h1>
     
     <div class="input-section">
         <h2>Upload CSV File</h2>
